# sibei-flow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/skills/dev-guardrails/: SKILL.md
.claude/skills/dev-guardrails/references/: ci-cd.md  git-hooks.md  pr-hygiene.md  test-strategy.md
.claude/skills/dev-guardrails/references/templates/: .pre-commit-config.yaml
.claude/skills/natural-writing/: SKILL.md
.claude/skills/natural-writing/references/: case-study-hello-im-jian.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
brain/: Cargo.toml  Dockerfile
brain/migrations/: 0001_init.sql  0002_pr.sql  0003_dedup.sql  0004_pr_claim.sql
brain/src/: api.rs  classify.rs  config.rs  lib.rs  main.rs  models.rs  web.rs  webhook.rs
brain/src/pr/: body.rs  git.rs  githost.rs  github.rs  mod.rs  offline.rs
brain/static/: index.html
brain/tests/: pr_opener.rs  seam2.rs
dags/: analytics_daily.py
db/warehouse/: hero_break.sql  hero_seed.sql  init.sql
docs/: ROADMAP.md  branch-protection.md
docs/design/: CONTEXT.md  FRAME.md  HERO-PIPELINE.md  PRD.md  QUESTIONS.md  RAW.md  REQS.md  SHAPING.md  SLICES.md  SPIKE-B.md  V1-plan.md  V2-plan.md  V3-plan.md  V4-plan.md  V5-plan.md
docs/design/adr/: 0001-control-plane-not-engine.md  0002-rust-core.md  0003-v1-scope-self-healing-wedge.md  0004-webhook-first-detection.md  0005-git-read-pr-apply-safety.md  0006-tiered-verification-sandbox.md  0007-llm-strategy-own-loop.md  0008-pluggable-executor-backends.md  0009-state-durability.md  0010-license-open-core.md  0011-pluggable-git-host.md  README.md
fixtures/: airflow_on_failure_callback.py  code_sql_failure.json  schema_drift_failure.json  timeout_failure.json
fixtures/dbt_project/: dbt_project.yml  profiles.yml
fixtures/dbt_project/models/marts/: orders.sql  schema.yml
fixtures/dbt_project/models/staging/: schema.yml  stg_customers.sql
hero/airflow/: Dockerfile  profiles.yml
hero/git-remote/: Dockerfile  entrypoint.sh
sandbox/: Dockerfile
scripts/: demo.sh  hero.sh
site/: README.md  index.html
snippets/: README.md  airflow_on_failure_callback.py
snippets/dbt/macros/: sbflow_on_run_end.sql
worker/: Dockerfile  pyproject.toml
worker/sbflow_worker/: __init__.py  claim.py  config.py  db.py  main.py  notify.py
worker/sbflow_worker/agent/: __init__.py  diffguard.py  diffing.py  loop.py  manifest.py  prodaction.py  schema.py  score.py  source.py  tools.py
worker/sbflow_worker/cli/: __init__.py  config.py  init.py  run.py  webhook.py
worker/sbflow_worker/llm/: __init__.py  base.py  claude.py  openai_compat.py  replay.py
worker/sbflow_worker/replays/: rename_drift.json
worker/sbflow_worker/sandbox/: __init__.py  evidence.py  runner.py
worker/tests/: test_agent_loop.py  test_claim.py  test_cli_init.py  test_cli_run.py  test_diffguard.py  test_hero.py  test_notify.py  test_prodaction.py  test_sandbox.py  test_score.py
