[package]
name = "brain"
version = "0.1.0"
edition = "2021"
description = "sibei-flow brain — webhook receiver, classifier, enqueue, dashboard read API (V1 walking skeleton)"
license = "Apache-2.0"

[lib]
name = "brain"
path = "src/lib.rs"

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
