[project]
name = "sbflow-worker"
version = "0.1.0"
description = "sibei-flow repair worker (V1) — Postgres claim loop; agent stubbed (no LLM)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    # LlmProvider backends (BYO-key; not needed by the replay provider at runtime
    # but installed so `claude`/`openai` are a config switch, not a rebuild).
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sbflow-worker = "sbflow_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbflow_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
