[project]
name = "sbflow-worker"
version = "0.1.0"
description = "sibei-flow repair worker (V1) — Postgres claim loop; agent stubbed (no LLM)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.3.4",
    # LlmProvider backends (BYO-key; not needed by the replay provider at runtime
    # but installed so `claude`/`openai` are a config switch, not a rebuild).
    "anthropic>=0.40",
    "openai>=2.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sbflow-worker = "sbflow_worker.main:main"
# V5 onboarding + cron-wrapper CLI (U1/U2). Pure-stdlib; ships with the worker.
sbflow = "sbflow_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbflow_worker"]

[tool.mypy]
files = ["sbflow_worker"]
python_version = "3.12"
# Third-party SDKs (anthropic/openai/psycopg) drive most of the remaining
# friction; silence missing stubs but keep our own code checked.
ignore_missing_imports = true
# BLOCKING: the worker type-checks clean. mypy is a hard gate in CI, the
# `typecheck` make target, and the pre-push hook. The only suppressions left are
# targeted `# type: ignore` on the LLM SDK overloads (anthropic/openai), where
# the neutral loop passes hand-built dicts the SDK's TypedDict overloads reject.
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-markers turns an unregistered marker into an error, so the fast/infra
# split can't silently drift. Every marker used must be declared below.
addopts = "--strict-markers"
markers = [
    "infra: needs external infrastructure (Postgres state DB, fixture warehouse, and/or the Docker socket for the real dbt sandbox). Deselect the fast, no-infra layer with `-m \"not infra\"`.",
    "hero: Seam-3 end-to-end acceptance against the LIVE hero stack (brain + worker + warehouse running via `docker compose up`; docs/design/HERO-PIPELINE.md). Implies `infra`; skips cleanly when the stack isn't up.",
]
